--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,4 +29,7 @@
       </g>
   </svg>
 </header>
-<app-home></app-home>
+<app-navbar></app-navbar>
+<div class="container-fluid">
+    <router-outlet></router-outlet>
+</div>
