--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,6 @@
   </svg>
 </header>
 <app-navbar></app-navbar>
-<div class="container-fluid">
+<div class="principal">
     <router-outlet></router-outlet>
 </div>
