--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,20 +1,29 @@
-<ul class="nav justify-content-center">
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="[ 'home' ]">Show All</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="[ 'continents/' + 'Africa']">Africa</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="[ 'continents/' + 'Americas']">America</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="[ 'continents/' + 'Asia']">Asia</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="[ 'continents/' + 'Europe']">Europa</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="[ 'continents/' + 'Oceania']">Oceania</a>
-    </li>
-  </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" [routerLink]="[ 'home' ]">Show All</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" [routerLink]="[ 'continents/' + 'Africa']">Africa</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" [routerLink]="[ 'continents/' + 'Americas']">America</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" [routerLink]="[ 'continents/' + 'Asia']">Asia</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" [routerLink]="[ 'continents/' + 'Europe']">Europa</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" [routerLink]="[ 'continents/' + 'Oceania']">Oceania</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" [routerLink]="[ 'search/']"><i class="fas fa-search"></i> Search</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
