--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,17 +1,11 @@
-<div class="row animated fast fadeIn mt-2">
-    <div class="col-xs-10 col-sm-6 col-md-6 col-lg-4 col-xl-4">
-        <input #termino type="text" (keyup)="buscar(termino.value)" class="form-control" placeholder="Search country">
-    </div>
-    <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
-        <div *ngIf="loading" class="text-center">
-            <img src="../../../assets/img/loading.svg" style="width: 40px;">
-        </div>
-    </div>
-  </div>
   <div *ngIf="nodata; else template">
-    <div class="alert alert-warning animated fast fadeIn mt-2" role="alert">
-        No results found
-    </div>
+    <p style="
+    text-align: center;
+    color: #bdbdbd;
+    font-family: fantasy;
+    font-size: 50px;
+    margin-top: 10%;
+">No results found</p>
   </div>
   <ng-template #template>
     <app-all-continents [loading]="loading" [veryfidata]="veryfidata" [africa]="africa" [americas]="americas" [asia]="asia" [europe]="europe" [oceania]="oceania"></app-all-continents>
